--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>prestise-send-receive</title>
-    <link rel="shortcut icon" href="img/logo.jpg">
+    <link rel="shortcut icon" href="img/dolar.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <br>
         <div class="card-body">
             <br>
-            <p class=" text-center fst-italic" style="color:white;"><b><strong style="background-color:blue">Prestige send and receive money</strong></b></p>
+            <p class=" text-center fst-italic" style="color:orange;"><b><strong >Prestige send and receive money</strong></b></p>
         </div>
 
 </h2>
@@ -27,7 +27,7 @@
     <div class="card-body">
         <div class="card-body text-center d-flex justify-content-center">
             <button  type="button" class="btn-sm btn  fst-italic btn-center" style="background-color:#708090;margin:5px"><a href="/form" style="color:white">send money</a></button>
-            <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:green;margin:5px"><a href="/listes" style="color:white">customer liste</a></button>
+            <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:green;margin:5px"><a href="/listes" style="color:white">list customers</a></button>
         </div>
     </div>
 </main>
@@ -62,11 +62,12 @@
 <br><br>
 <div class="card-body">
     <div class="card-body text-center d-flex justify-content-center">
-        <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:yellow;margin:5px"><a href="https://g.co/kgs/8TcPjd" style="color:black"><b>dollar today</b></a></button>
+        <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:orange;margin:5px"><a href="https://g.co/kgs/8TcPjd" style="color:white"><b>RATE-TODAY</b></a></button>
+        <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:green;margin:5px"><a href="https://wise.com/us/currency-converter/usd-to-xof-rate" style="color:white"><b>WISERATE</b></a></button>
     </div>
 </div>
 <br><br>
-<footer class=" text-center fst-italic" style="color:white"><b>envoyer et recevoir votre argent en toute securite</b></footer>
+<footer class=" text-center fst-italic" style="color:white;"><b style="background-color:orange">envoyer et recevoir votre argent en toute securite</b></footer>
 
 <!--Import jQuery before materialize.js-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
