--- a/src/main/resources/templates/listes.html
+++ b/src/main/resources/templates/listes.html
@@ -14,9 +14,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body class="container">
-<header class=" card-body d-flex justify-content-center" style="background-color:#708090;color:white"><b>Liste des Clientes</b></header>
+<header class=" card-body d-flex justify-content-center" style="background-color:orange;color:white"><b>LIST FOR CUSTOMERS </b></header>
 <div>
-    <input class="form-control" id="filtro" placeholder="Buscar opçâo" />
+    <input class="form-control" id="filtro" placeholder="search" />
 </div>
 <table class="table">
     <thead class="">
@@ -24,33 +24,33 @@
         <th>S_NAME</th>
         <th>PHONE</th>
         <th>S_AMOUNT</th>
-        <th>COUNTRY</th>
+        <th>R_COUNTRY</th>
         <th>R_NAME</th>
         <th>R_PHONE</th>
         <th>R_AMOUNT</th>
         <th>DATE</th>
-        <th>MTR</th>
+        <th>PIN</th>
     </tr>
     </thead>
     <tbody th:each="senderData : ${senderData}">
     <td class="text-capitalize" ><span th:text="${senderData.prenom}"></span></td>
     <td class="text-capitalize"><span th:text="${senderData.telephone}"></span></td>
-    <td class="text-capitalize" ><span th:text="${senderData.montant}"></span></td>
+    <td class="text-capitalize" >$<span th:text="${senderData.montant}"></span></td>
     <td class="text-capitalize"><span th:text="${senderData.pays}"></span></td>
     <td class="text-capitalize"><span th:text="${senderData.nome}"></span></td>
     <td class="text-capitalize"><span th:text="${senderData.phone}"></span></td>
-    <td class="text-capitalize" ><span th:text="${senderData.recevoir}"></span></td>
+    <td class="text-capitalize" ><span th:text="${senderData.recevoir}"></span>FCFA</td>
     <td class="text-capitalize"><span th:text="${senderData.jour}"></span></td>
-    <td class="text-capitalize"><span th:text="${senderData.matriculation}"></span></td>
+    <td class="text-capitalize">PSRM-<span th:text="${senderData.matriculation}"></span></td>
     </tbody>
 </table>
 
-<div class="container" th:each="reg : ${registros}" style="color: royalblue"><p class="">CUSTOMER TOTAL : <span
+<div class="container" th:each="reg : ${registros}" style="color: orange"><p class="">CUSTOMER TOTAL : <span
         th:text="${registros}"></span></p>
 </div>
 
 <div class="text-center">
-    <button  class="btn btn-info center" style="margin:30px" ><a href="/index" style="color:white">retour</a></button>
+    <button  class="btn center" style="margin:30px;background-color:orange" ><a href="/index" style="color:white">GO BACK</a></button>
 </div>
 <!--<a href="/index" class="waves-effect waves-light btn-small btn-info"><i class="material-icons left">cloud</i>Retour au page principal</a>-->
 
