--- a/src/main/resources/templates/alter.html
+++ b/src/main/resources/templates/alter.html
@@ -3,7 +3,7 @@
       xml:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <title>cadastre</title>
+    <title>alter customer</title>
     <link rel="shortcut icon" href="img/logo.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -11,31 +11,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body class="container" style="background-color:#cccccc">
-<header><p class="card-body d-flex justify-content-center" style="color:orange"><b>Veuillez remplir le formulaire</b></p></header>
+<header><p class="card-body d-flex justify-content-center" style="color:orange"><b>Alter Customer</b></p></header>
 <div>
-<form class="container" method="POST" th:object="${senderData}">
+<form class="container" method="POST" action="/alter" th:object="${senderData}">
     <th:block th:include="messageValidation"></th:block>
         <div class="row col 12 form-group border border-dark card-body">
+            <div style="padding:6px">
+                <input hidden class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
+                       name="id" required
+                       th:field="*{id}"/>
+            </div>
             <div style="padding:6px">
                 <label class="fst-italic" style="color:orange"><b>Full Name</b></label>
                 <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
                        name="prenom" required
-                       th:fieled="*{prenom}"/>
+                       th:field="*{prenom}"/>
             </div>
 
             <div style="padding:6px">
                 <label class="fst-italic" style="color:orange"><b>SendAmt</b></label>
                 <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
                        name="montant" required
-                       th:fieled="*{montant}"/>
+                       th:field="*{montant}"/>
             </div>
 
             <div style="padding:6px">
             <label class="fst-italic" style="color:orange"><b>Sender Phone</b></label>
             <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                    required
-                   name="telephone" th:fieled="*{telephone}"/>
+                   name="telephone" th:field="*{telephone}"/>
             </div>
+
 
             <div style="padding:6px">
                 <label class="fst-italic" style="color:orange"><b>Receive Country</b></label>
@@ -51,21 +57,36 @@
                     <label class="fst-italic" style="color:orange"><b>Receive Name</b></label>
                     <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
                            name="nome" required
-                           th:fieled="*{nome}"/>
+                           th:field="*{nome}"/>
+                </div>
+                <div style="padding:6px">
+                    <input hidden class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
+                           name="matriculation" required
+                           th:field="*{matriculation}"/>
                 </div>
 
                 <div style="padding:6px">
                     <label class="fst-italic" style="color:orange"><b>ReceiveAmt</b></label>
                     <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
                            name="recevoir" required
-                           th:fieled="*{recevoir}"/>
+                           th:field="*{recevoir}"/>
                 </div>
                 <div style="padding:6px">
                     <label class="fst-italic" style="color:orange"><b>Receive Phone</b></label>
                     <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                            required
-                           name="phone" th:fieled="*{phone}"/>
+                           name="phone" th:field="*{phone}"/>
                 </div>
+                <div style="padding:6px">
+                    <label class="fst-italic" style="color:orange"><b>STATUS</b></label>
+                    <select class="form-select form-select-sm mb-3 text-uppercase fst-italic rounded-pill" required th:errorclass="is-invalid"
+                            aria-label=".form-select-sm example value=" type="text" name="status" th:fieled="*{status}">
+                        <option  selected disabled value="" style="color:orange">PUT_STATUS</option>
+                        <option style="color:YELLOW">UNPAID</option>
+                        <option style="color:GREEN">PAID</option>
+                        <option style="color:orange">PENDING</option>
+                        <option style="color:red">CANCEL</option>
+                    </select>
 
                 <div class="text-center">
                     <button class="btn center" style="margin:30px;background-color:green;color:white" type="submit">SEND</button>
