--- a/src/main/resources/templates/messageValidations.html
+++ b/src/main/resources/templates/messageValidations.html
@@ -3,13 +3,13 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://thymeleaf.org">
 <body>
-<div class="alert alert-success" th:text="${mensagem}"
-     th:if="${not #strings.isEmpty(mensagem)}"></div>
+
+<div class="alert alert-red" th:text="${mensagems}"
+     th:if="${not #strings.isEmpty(mensagems)}"></div>
 <div class="alert alert-danger"  th:if="${#fields.hasAnyErrors()}">
     <div th:each="detailedError : ${#fields.detailedErrors()}">
         <span th:text="${detailedError.message}"></span>
     </div>
 </div>
-
 </body>
 </html>
