--- a/src/main/resources/templates/prestige-principal.html
+++ b/src/main/resources/templates/prestige-principal.html
@@ -25,7 +25,9 @@
     <div class="justify-content-center">
         <form method="post" action="pesquisar-resultado" th:object="${senderData}" class="text-center">
             <input class="form-control text-center" style="width: 80%;" id="filtro"  type="text" name="phone" th:field="*{telephone}" placeholder="search" />
-            <button class="btn btn-dark " type="submit">seach</button>
+            <div>
+                <button class="btn btn-primary " type="submit" style="color:white">search</button>
+            </div>
         </form>
     </div>
 
