filtro with status unpaid

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -68,7 +68,7 @@
 
                 <div style="padding:6px">
                     <label class="fst-italic" style="color:orange"><b>ReceiveAmt</b></label>
-                    <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
+                    <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                            name="recevoir" required
                            th:fieled="*{recevoir}"/>
                 </div>
