--- a/src/main/resources/templates/prestige-principal.html
+++ b/src/main/resources/templates/prestige-principal.html
@@ -36,7 +36,8 @@
     <div class="card-body">
         <div class="card-body text-center d-flex justify-content-center">
             <button  type="button" class="btn-sm btn  fst-italic btn-center" style="background-color:#708090;margin:5px"><a href="/form" style="color:white">send money</a></button>
-            <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:green;margin:5px"><a href="/listes" style="color:white">list customers</a></button>
+            <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:green;margin:5px"><a href="/invoices-all" style="color:white">invoice all</a></button>
+            <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:red;margin:5px"><a href="/listes-unpaid" style="color:white">UNPAID LIST</a></button>
         </div>
     </div>
 </main>
