--- a/src/main/resources/templates/alter.html
+++ b/src/main/resources/templates/alter.html
@@ -30,7 +30,7 @@
 
             <div style="padding:6px">
                 <label class="fst-italic" style="color:orange"><b>SendAmt</b></label>
-                <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
+                <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                        name="montant" required
                        th:field="*{montant}"/>
             </div>
@@ -67,7 +67,7 @@
 
                 <div style="padding:6px">
                     <label class="fst-italic" style="color:orange"><b>ReceiveAmt</b></label>
-                    <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
+                    <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                            name="recevoir" required
                            th:field="*{recevoir}"/>
                 </div>
