--- a/src/main/resources/templates/pesquisar-resultado.html
+++ b/src/main/resources/templates/pesquisar-resultado.html
@@ -32,7 +32,7 @@
         <th>PIN</th>
         <th>STATUS</th>
         <th>EDIT</th>
-        <th>DELETE</th>
+        <th>PAYOUT</th>
     </tr>
     </thead>
     <tbody th:each="senderData : ${senderData}">
