--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,30 +13,31 @@
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body class="container" style="background-image:url('img/sec.png');
+<body class="container align-items:center text-center" style="background-image:url('img/sec.png');
     min-height:10px;
     max-width: 20%;
-    height:40%">
+    height:20%">
 <header><p class="card-body d-flex justify-content-center" style="color:blue"><b>LOGIN</b></p></header>
-<div>
-<form class="container" method="POST" th:object="${loginModelDTO}">
-    <th:block th:include="messageValidations"></th:block>
+<div class="text-center align-items:center" style="background-color:#ccffcc; border-radius:7px; border:7px; border-color:orange">
+<form class="container" method="POST">
         <div class="row col 12 form-group border border-dark card-body">
             <div style="padding:6px">
-                <label class="fst-italic" style="color:orange"><b>User Name</b></label>
-                <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
-                       name="usuario" required
-                       th:fieled="*{usuario}"/>
+                <label class="fst-italic" style="color:orange"><b>your email</b></label>
+                <input class="form-control rounded-pill" placeholder="" type="email" value=""
+                       name=""  required
+                       />
             </div>
 
             <div style="padding:6px">
                 <label class="fst-italic" style="color:orange"><b>PASSWORD</b></label>
-                <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="password" value=""
-                       name="motpass" required
-                       th:fieled="*{motpass}"/>
+                <input class="form-control rounded-pill" placeholder=""  type="password" value=""
+                       name="" required
+                       />
             </div>
-                <div class="text-center">
-                    <button class="btn center" style="margin:30px;background-color:green;color:white" type="submit">Login</button>
+            <p class=" text-center font-italic" style="color:white"><b>you no have user?<a href="/login-up">click here</a></b></p>
+
+            <div class="text-center">
+                    <button class="btn center" style="margin:30px;background-color:orange;color:white" type="submit">Login</button>
                 </div>
                 <p class=" text-center font-italic" style="color:white"><b>Prestige Securite</b></p>
             </div>
