--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -25,7 +25,7 @@
 
             <div style="padding:6px">
                 <label class="fst-italic" style="color:orange"><b>SendAmt</b></label>
-                <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
+                <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                        name="montant" required
                        th:fieled="*{montant}"/>
             </div>
