--- a/src/main/resources/templates/login-up.html
+++ b/src/main/resources/templates/login-up.html
@@ -25,15 +25,15 @@
             <div style="padding:6px">
                 <label class="fst-italic" style="color:orange"><b>User Name</b></label>
                 <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
-                       name="usuario" required
-                       th:fieled="*{usuario}"/>
+                       name="user" required
+                       th:fieled="*{user}"/>
             </div>
 
             <div style="padding:6px">
                 <label class="fst-italic" style="color:orange"><b>PASSWORD</b></label>
                 <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="password" value=""
-                       name="motpass" required
-                       th:fieled="*{motpass}"/>
+                       name="senha" required
+                       th:fieled="*{senha}"/>
             </div>
 
             <div style="padding:6px">
